--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# System and testing
-.nova/
-*.bak
-.DS_store
-
 # Files and directories created by pub
 .dart_tool/
 .packages
@@ -12,3 +7,5 @@ build/
 
 # Directory created by dartdoc
 doc/api/
+
+.DS_Store
