--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: bats_and_cats
-description: A sample command-line application.
+name: quickstart
+description: An absolute bare-bones web app.
 # version: 1.0.0
-# homepage: https://www.example.com
+#homepage: https://www.example.com
 
 environment:
   sdk: '>=2.10.0 <3.0.0'
@@ -10,5 +10,6 @@ environment:
 #  path: ^1.7.0
 
 dev_dependencies:
+  build_runner: ^1.10.0
+  build_web_compilers: ^2.11.0
   pedantic: ^1.9.0
-  test: ^1.14.4
