--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,17 @@
 name: bat.institute
-description: An absolute bare-bones web app.
+description: An absolute bat-bones web app.
 # version: 1.0.0
 #homepage: https://www.example.com
 
 environment:
   sdk: '>=2.10.0 <3.0.0'
 
-#dependencies:
+dependencies:
 #  path: ^1.7.0
+  angular: ^6.0.1
 
 dev_dependencies:
   build_runner: ^1.10.0
   build_web_compilers: ^2.11.0
   pedantic: ^1.9.0
-  sass_builder: ^2.1.3  
+  sass_builder: ^2.1.3
