--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
 #  path: ^1.7.0
   angular: ^6.0.1
+  angular_forms: ^3.0.0
 
 dev_dependencies:
   build_runner: ^1.10.0
