--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   angular: ^6.0.1
   angular_forms: ^3.0.0
+  angular_router: ^2.0.0
 
 dev_dependencies:
   build_runner: ^1.10.0
