--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ dependencies:
   angular: ^6.0.1
   angular_forms: ^3.0.0
   angular_router: ^2.0.0
-  http: ^0.11.3+17
+  http: ^0.12.0
   stream_transform: ^2.0.0
 
 dev_dependencies:
